--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 Esta es una pagina para github pages
 nueva prueba
-<img src="assets/wow.png">
+<!--<img src="assets/wow.png">-->
 </body>
 
 </html>
